metadata/objects/graxcaseindex__x.object
<CustomObject>
    <fields>
        <fullName>F_P_Brief_c__c</fullName>
        <description>F_P_Brief__c</description>
        <externalDeveloperName>F_P_Brief__c</externalDeveloperName>
        <label>F_P_Brief__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Code_c__c</fullName>
        <description>Family_Code__c</description>
        <externalDeveloperName>Family_Code__c</externalDeveloperName>
        <label>Family_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_c__c</fullName>
        <description>Family__c</description>
        <externalDeveloperName>Family__c</externalDeveloperName>
        <label>Family__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Comment_English_c__c</fullName>
        <description>Feedback_Comment_English__c</description>
        <externalDeveloperName>Feedback_Comment_English__c</externalDeveloperName>
        <label>Feedback_Comment_English__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Comment_c__c</fullName>
        <description>Feedback_Comment__c</description>
        <externalDeveloperName>Feedback_Comment__c</externalDeveloperName>
        <label>Feedback_Comment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fictive_Box_c__c</fullName>
        <description>Fictive_Box__c</description>
        <externalDeveloperName>Fictive_Box__c</externalDeveloperName>
        <label>Fictive_Box__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Parts_Manager_c__c</fullName>
        <description>Field_Parts_Manager__c</description>
        <externalDeveloperName>Field_Parts_Manager__c</externalDeveloperName>
        <label>Field_Parts_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Service_Manager_c__c</fullName>
        <description>Field_Service_Manager__c</description>
        <externalDeveloperName>Field_Service_Manager__c</externalDeveloperName>
        <label>Field_Service_Manager__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Case_Owner_c__c</fullName>
        <description>First_Case_Owner__c</description>
        <externalDeveloperName>First_Case_Owner__c</externalDeveloperName>
        <label>First_Case_Owner__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Contact_Close_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>First_Contact_Close__c</description>
        <externalDeveloperName>First_Contact_Close__c</externalDeveloperName>
        <label>First_Contact_Close__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Date_Time_c__c</fullName>
        <description>First_Response_Date_Time__c</description>
        <externalDeveloperName>First_Response_Date_Time__c</externalDeveloperName>
        <label>First_Response_Date_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Follow_up_Date_c__c</fullName>
        <description>Follow_up_Date__c</description>
        <externalDeveloperName>Follow_up_Date__c</externalDeveloperName>
        <label>Follow_up_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Force_com_URL_c__c</fullName>
        <description>Force_com_URL__c</description>
        <externalDeveloperName>Force_com_URL__c</externalDeveloperName>
        <label>Force_com_URL__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_com_aeid_c__c</fullName>
        <description>Force_com_aeid__c</description>
        <externalDeveloperName>Force_com_aeid__c</externalDeveloperName>
        <label>Force_com_aeid__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_com_ceid_c__c</fullName>
        <description>Force_com_ceid__c</description>
        <externalDeveloperName>Force_com_ceid__c</externalDeveloperName>
        <label>Force_com_ceid__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GFC_c__c</fullName>
        <description>GFC__c</description>
        <externalDeveloperName>GFC__c</externalDeveloperName>
        <label>GFC__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAXCompanyName__c</fullName>
        <description>GRAXCompanyName</description>
        <externalDeveloperName>GRAXCompanyName</externalDeveloperName>
        <label>GRAXCompanyName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_FailureCode_c__c</fullName>
        <description>Global_FailureCode__c</description>
        <externalDeveloperName>Global_FailureCode__c</externalDeveloperName>
        <label>Global_FailureCode__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Failure_Area_c__c</fullName>
        <description>Global_Failure_Area__c</description>
        <externalDeveloperName>Global_Failure_Area__c</externalDeveloperName>
        <label>Global_Failure_Area__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Failure_Defect_c__c</fullName>
        <description>Global_Failure_Defect__c</description>
        <externalDeveloperName>Global_Failure_Defect__c</externalDeveloperName>
        <label>Global_Failure_Defect__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Failure_SubArea_c__c</fullName>
        <description>Global_Failure_SubArea__c</description>
        <externalDeveloperName>Global_Failure_SubArea__c</externalDeveloperName>
        <label>Global_Failure_SubArea__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Model_c__c</fullName>
        <description>Global_Model__c</description>
        <externalDeveloperName>Global_Model__c</externalDeveloperName>
        <label>Global_Model__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Part_Number_c__c</fullName>
        <description>Global_Part_Number__c</description>
        <externalDeveloperName>Global_Part_Number__c</externalDeveloperName>
        <label>Global_Part_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goods_In_Receipt_c__c</fullName>
        <description>Goods_In_Receipt__c</description>
        <externalDeveloperName>Goods_In_Receipt__c</externalDeveloperName>
        <label>Goods_In_Receipt__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Brand_c__c</fullName>
        <description>Group_Brand__c</description>
        <externalDeveloperName>Group_Brand__c</externalDeveloperName>
        <label>Group_Brand__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasCommentsUnreadByOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasCommentsUnreadByOwner</description>
        <externalDeveloperName>HasCommentsUnreadByOwner</externalDeveloperName>
        <label>HasCommentsUnreadByOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasSelfServiceComments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HasSelfServiceComments</description>
        <externalDeveloperName>HasSelfServiceComments</externalDeveloperName>
        <label>HasSelfServiceComments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_New_Message_For_Dealer_c__c</fullName>
        <description>Has_New_Message_For_Dealer__c</description>
        <externalDeveloperName>Has_New_Message_For_Dealer__c</externalDeveloperName>
        <label>Has_New_Message_For_Dealer__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Priority_Expedite_Count_c__c</fullName>
        <description>High_Priority_Expedite_Count__c</description>
        <externalDeveloperName>High_Priority_Expedite_Count__c</externalDeveloperName>
        <label>High_Priority_Expedite_Count__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDEAL_Review_c__c</fullName>
        <description>IDEAL_Review__c</description>
        <externalDeveloperName>IDEAL_Review__c</externalDeveloperName>
        <label>IDEAL_Review__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <description>Id</description>
        <externalDeveloperName>Id</externalDeveloperName>
        <label>Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Number_c__c</fullName>
        <description>Incident_Number__c</description>
        <externalDeveloperName>Incident_Number__c</externalDeveloperName>
        <label>Incident_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_Provided_c__c</fullName>
        <description>Information_Provided__c</description>
        <externalDeveloperName>Information_Provided__c</externalDeveloperName>
        <label>Information_Provided__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Information_needed_to_solve_the_issue_c__c</fullName>
        <description>Information_needed_to_solve_the_issue__c</description>
        <externalDeveloperName>Information_needed_to_solve_the_issue__c</externalDeveloperName>
        <label>Information_needed_to_solve_the_issue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inquiry_Resolved_c__c</fullName>
        <description>Inquiry_Resolved__c</description>
        <externalDeveloperName>Inquiry_Resolved__c</externalDeveloperName>
        <label>Inquiry_Resolved__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Hours_Estimate_c__c</fullName>
        <description>Internal_Hours_Estimate__c</description>
        <externalDeveloperName>Internal_Hours_Estimate__c</externalDeveloperName>
        <label>Internal_Hours_Estimate__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_c__c</fullName>
        <description>Invoice_Date__c</description>
        <externalDeveloperName>Invoice_Date__c</externalDeveloperName>
        <label>Invoice_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_c__c</fullName>
        <description>Invoice__c</description>
        <externalDeveloperName>Invoice__c</externalDeveloperName>
        <label>Invoice__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosedOnCreate__c</fullName>
        <description>IsClosedOnCreate</description>
        <externalDeveloperName>IsClosedOnCreate</externalDeveloperName>
        <label>IsClosedOnCreate</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsClosed</description>
        <externalDeveloperName>IsClosed</externalDeveloperName>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsDeleted</description>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsEscalated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsEscalated</description>
        <externalDeveloperName>IsEscalated</externalDeveloperName>
        <label>IsEscalated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsLocked</description>
        <externalDeveloperName>IsLocked</externalDeveloperName>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelfServiceClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsSelfServiceClosed</description>
        <externalDeveloperName>IsSelfServiceClosed</externalDeveloperName>
        <label>IsSelfServiceClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStopped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsStopped</description>
        <externalDeveloperName>IsStopped</externalDeveloperName>
        <label>IsStopped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInCss__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsVisibleInCss</description>
        <externalDeveloperName>IsVisibleInCss</externalDeveloperName>
        <label>IsVisibleInCss</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleInSelfService__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IsVisibleInSelfService</description>
        <externalDeveloperName>IsVisibleInSelfService</externalDeveloperName>
        <label>IsVisibleInSelfService</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Case_Comment_c__c</fullName>
        <description>Is_Case_Comment__c</description>
        <externalDeveloperName>Is_Case_Comment__c</externalDeveloperName>
        <label>Is_Case_Comment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Manual_Reassign_c__c</fullName>
        <description>Is_Manual_Reassign__c</description>
        <externalDeveloperName>Is_Manual_Reassign__c</externalDeveloperName>
        <label>Is_Manual_Reassign__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Tech_Connect_Case_c__c</fullName>
        <description>Is_Tech_Connect_Case__c</description>
        <externalDeveloperName>Is_Tech_Connect_Case__c</externalDeveloperName>
        <label>Is_Tech_Connect_Case__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Resolved_by_c__c</fullName>
        <description>Issue_Resolved_by__c</description>
        <externalDeveloperName>Issue_Resolved_by__c</externalDeveloperName>
        <label>Issue_Resolved_by__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket_AGCO_c__c</fullName>
        <description>JIRA_Ticket_AGCO__c</description>
        <externalDeveloperName>JIRA_Ticket_AGCO__c</externalDeveloperName>
        <label>JIRA_Ticket_AGCO__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Ticket_Tierra_c__c</fullName>
        <description>JIRA_Ticket_Tierra__c</description>
        <externalDeveloperName>JIRA_Ticket_Tierra__c</externalDeveloperName>
        <label>JIRA_Ticket_Tierra__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Just_Closed_c__c</fullName>
        <description>Just_Closed__c</description>
        <externalDeveloperName>Just_Closed__c</externalDeveloperName>
        <label>Just_Closed__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_Article_Attached_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KB_Article_Attached__c</description>
        <externalDeveloperName>KB_Article_Attached__c</externalDeveloperName>
        <label>KB_Article_Attached__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KO_Checked_DateTime_c__c</fullName>
        <description>KO_Checked_DateTime__c</description>
        <externalDeveloperName>KO_Checked_DateTime__c</externalDeveloperName>
        <label>KO_Checked_DateTime__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kit_Usage_c__c</fullName>
        <description>Kit_Usage__c</description>
        <externalDeveloperName>Kit_Usage__c</externalDeveloperName>
        <label>Kit_Usage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Knowledge_Object_c__c</fullName>
        <description>Knowledge_Object__c</description>
        <externalDeveloperName>Knowledge_Object__c</externalDeveloperName>
        <label>Knowledge_Object__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LM_External_Id_c__c</fullName>
        <description>LM_External_Id__c</description>
        <externalDeveloperName>LM_External_Id__c</externalDeveloperName>
        <label>LM_External_Id__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByAlias__c</fullName>
        <description>LastModifiedByAlias</description>
        <externalDeveloperName>LastModifiedByAlias</externalDeveloperName>
        <label>LastModifiedByAlias</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <description>LastModifiedById</description>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>LastModifiedById</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_grax_xf_user__c</fullName>
        <description>LastModifiedById_grax_xf_user</description>
        <externalDeveloperName>LastModifiedById_grax_xf_user</externalDeveloperName>
        <label>LastModifiedById_grax_xf_user</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_Name__c</fullName>
        <description>LastModifiedBy_Name</description>
        <externalDeveloperName>LastModifiedBy_Name</externalDeveloperName>
        <label>LastModifiedBy_Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <description>LastReferencedDate</description>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>LastReferencedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <description>LastViewedDate</description>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>LastViewedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Date_Time_c__c</fullName>
        <description>Last_Comment_Date_Time__c</description>
        <externalDeveloperName>Last_Comment_Date_Time__c</externalDeveloperName>
        <label>Last_Comment_Date_Time__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Comment_Date_c__c</fullName>
        <description>Last_Comment_Date__c</description>
        <externalDeveloperName>Last_Comment_Date__c</externalDeveloperName>
        <label>Last_Comment_Date__c</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_History_Item_c__c</fullName>
        <description>Last_History_Item__c</description>
        <externalDeveloperName>Last_History_Item__c</externalDeveloperName>
        <label>Last_History_Item__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_c__c</fullName>
        <description>Load__c</description>
        <externalDeveloperName>Load__c</externalDeveloperName>
        <label>Load__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loaner_Required_c__c</fullName>
        <description>Loaner_Required__c</description>
        <externalDeveloperName>Loaner_Required__c</externalDeveloperName>
        <label>Loaner_Required__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Case_Origin_c__c</fullName>
        <description>Lock_Case_Origin__c</description>
        <externalDeveloperName>Lock_Case_Origin__c</externalDeveloperName>
        <label>Lock_Case_Origin__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_First_Response_Date_Time_c__c</fullName>
        <description>Lock_First_Response_Date_Time__c</description>
        <externalDeveloperName>Lock_First_Response_Date_Time__c</externalDeveloperName>
        <label>Lock_First_Response_Date_Time__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_In_Quest_c__c</fullName>
        <description>Machine_In_Quest__c</description>
        <externalDeveloperName>Machine_In_Quest__c</externalDeveloperName>
        <label>Machine_In_Quest__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Serial_c__c</fullName>
        <description>Machine_Serial__c</description>
        <externalDeveloperName>Machine_Serial__c</externalDeveloperName>
        <label>Machine_Serial__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Serviced_c__c</fullName>
        <description>Machine_Serviced__c</description>
        <externalDeveloperName>Machine_Serviced__c</externalDeveloperName>
        <label>Machine_Serviced__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Notes_Needed_c__c</fullName>
        <description>Manufacturer_Notes_Needed__c</description>
        <externalDeveloperName>Manufacturer_Notes_Needed__c</externalDeveloperName>
        <label>Manufacturer_Notes_Needed__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Location_c__c</fullName>
        <description>Manufacturing_Location__c</description>
        <externalDeveloperName>Manufacturing_Location__c</externalDeveloperName>
        <label>Manufacturing_Location__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Code_c__c</fullName>
        <description>Market_Code__c</description>
        <externalDeveloperName>Market_Code__c</externalDeveloperName>
        <label>Market_Code__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <description>Market__c</description>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <label>Market__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MayEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MayEdit</description>
        <externalDeveloperName>MayEdit</externalDeveloperName>
        <label>MayEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus__c</fullName>
        <description>MilestoneStatus</description>
        <externalDeveloperName>MilestoneStatus</externalDeveloperName>
        <label>MilestoneStatus</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MilestoneStatus_c__c</fullName>
        <description>MilestoneStatus__c</description>
        <externalDeveloperName>MilestoneStatus__c</externalDeveloperName>
        <label>MilestoneStatus__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Device_Setup_c__c</fullName>
        <description>Mobile_Device_Setup__c</description>
        <externalDeveloperName>Mobile_Device_Setup__c</externalDeveloperName>
        <label>Mobile_Device_Setup__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Not_Found_c__c</fullName>
        <description>Model_Not_Found__c</description>
        <externalDeveloperName>Model_Not_Found__c</externalDeveloperName>
        <label>Model_Not_Found__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Number_c__c</fullName>
        <description>Model_Number__c</description>
        <externalDeveloperName>Model_Number__c</externalDeveloperName>
        <label>Model_Number__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Product_Description_or_Version_c__c</fullName>
        <description>Model_Product_Description_or_Version__c</description>
        <externalDeveloperName>Model_Product_Description_or_Version__c</externalDeveloperName>
        <label>Model_Product_Description_or_Version__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_c__c</fullName>
        <description>Model__c</description>
        <externalDeveloperName>Model__c</externalDeveloperName>
        <label>Model__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Issue_c__c</fullName>
        <description>Monitor_Issue__c</description>
        <externalDeveloperName>Monitor_Issue__c</externalDeveloperName>
        <label>Monitor_Issue__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Approval_Comment_Base_c__c</fullName>
        <description>Most_Recent_Approval_Comment_Base__c</description>
        <externalDeveloperName>Most_Recent_Approval_Comment_Base__c</externalDeveloperName>
        <label>Most_Recent_Approval_Comment_Base__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Approval_Comment_c__c</fullName>
        <description>Most_Recent_Approval_Comment__c</description>
        <externalDeveloperName>Most_Recent_Approval_Comment__c</externalDeveloperName>
        <label>Most_Recent_Approval_Comment__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiple_Part_c__c</fullName>
        <description>Multiple_Part__c</description>
        <externalDeveloperName>Multiple_Part__c</externalDeveloperName>
        <label>Multiple_Part__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_MOQ_c__c</fullName>
        <description>New_MOQ__c</description>
        <externalDeveloperName>New_MOQ__c</externalDeveloperName>
        <label>New_MOQ__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Price_c__c</fullName>
        <description>New_Price__c</description>
        <externalDeveloperName>New_Price__c</externalDeveloperName>
        <label>New_Price__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_c__c</fullName>
        <description>Next_Steps__c</description>
        <externalDeveloperName>Next_Steps__c</externalDeveloperName>
        <label>Next_Steps__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Causal_Part_Reason_c__c</fullName>
        <description>No_Causal_Part_Reason__c</description>
        <externalDeveloperName>No_Causal_Part_Reason__c</externalDeveloperName>
        <label>No_Causal_Part_Reason__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Causal_Part_c__c</fullName>
        <description>No_Causal_Part__c</description>
        <externalDeveloperName>No_Causal_Part__c</externalDeveloperName>
        <label>No_Causal_Part__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPS_Instructions_c__c</fullName>
        <description>OPS_Instructions__c</description>
        <externalDeveloperName>OPS_Instructions__c</externalDeveloperName>
        <label>OPS_Instructions__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oasis_Campaign_Loaded_c__c</fullName>
        <description>Oasis_Campaign_Loaded__c</description>
        <externalDeveloperName>Oasis_Campaign_Loaded__c</externalDeveloperName>
        <label>Oasis_Campaign_Loaded__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Off_Lot_Date_c__c</fullName>
        <description>Off_Lot_Date__c</description>
        <externalDeveloperName>Off_Lot_Date__c</externalDeveloperName>
        <label>Off_Lot_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Voucher_c__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Offer_Voucher__c</description>
        <externalDeveloperName>Offer_Voucher__c</externalDeveloperName>
        <label>Offer_Voucher__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Due_Date_c__c</fullName>
        <description>Old_Due_Date__c</description>
        <externalDeveloperName>Old_Due_Date__c</externalDeveloperName>
        <label>Old_Due_Date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Expedited_Backorders_c__c</fullName>
        <description>Open_Expedited_Backorders__c</description>
        <externalDeveloperName>Open_Expedited_Backorders__c</externalDeveloperName>
        <label>Open_Expedited_Backorders__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Hours_c__c</fullName>
        <description>Operating_Hours__c</description>
        <externalDeveloperName>Operating_Hours__c</externalDeveloperName>
        <label>Operating_Hours__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_System_c__c</fullName>
        <description>Operating_System__c</description>
        <externalDeveloperName>Operating_System__c</externalDeveloperName>
        <label>Operating_System__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Acknowledgement_All_Locations_c__c</fullName>
        <description>Order_Acknowledgement_All_Locations__c</description>
        <externalDeveloperName>Order_Acknowledgement_All_Locations__c</externalDeveloperName>
        <label>Order_Acknowledgement_All_Locations__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Acknowledgement_My_Location_c__c</fullName>
        <description>Order_Acknowledgement_My_Location__c</description>
        <externalDeveloperName>Order_Acknowledgement_My_Location__c</externalDeveloperName>
        <label>Order_Acknowledgement_My_Location__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Category_PickList_c__c</fullName>
        <description>Order_Category_PickList__c</description>
        <externalDeveloperName>Order_Category_PickList__c</externalDeveloperName>
        <label>Order_Category_PickList__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Category_c__c</fullName>
        <description>Order_Category__c</description>
        <externalDeveloperName>Order_Category__c</externalDeveloperName>
        <label>Order_Category__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date_Time_c__c</fullName>
        <description>Order_Date_Time__c</description>
        <externalDeveloperName>Order_Date_Time__c</externalDeveloperName>
        <label>Order_Date_Time__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Reference_c__c</fullName>
        <description>Order_Reference__c</description>
        <externalDeveloperName>Order_Reference__c</externalDeveloperName>
        <label>Order_Reference__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type_CPS_c__c</fullName>
        <description>Order_Type_CPS__c</description>
        <externalDeveloperName>Order_Type_CPS__c</externalDeveloperName>
        <label>Order_Type_CPS__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type_c__c</fullName>
        <description>Order_Type__c</description>
        <externalDeveloperName>Order_Type__c</externalDeveloperName>
        <label>Order_Type__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_c__c</fullName>
        <description>Order__c</description>
        <externalDeveloperName>Order__c</externalDeveloperName>
        <label>Order__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID_c__c</fullName>
        <description>Org_Cust_Case_ID__c</description>
        <externalDeveloperName>Org_Cust_Case_ID__c</externalDeveloperName>
        <label>Org_Cust_Case_ID__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orginal_Usage_c__c</fullName>
        <description>Orginal_Usage__c</description>
        <externalDeveloperName>Orginal_Usage__c</externalDeveloperName>
        <label>Orginal_Usage__c</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>Origin</description>
        <externalDeveloperName>Origin</externalDeveloperName>
        <label>Origin</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>